@@ -6,6 +6,9 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -21,15 +24,20 @@ public class CanonicalizeTest {
     private StringWriter out = new StringWriter();
     private StringWriter err = new StringWriter();
 
-    private String inputPath = CanonicalizeTest.class
-            .getResource("/fr/inria/corese/command/programs/canonicalize/input/")
-            .getPath();
-    private String referencesPath = CanonicalizeTest.class
-            .getResource("/fr/inria/corese/command/programs/canonicalize/references/")
-            .getPath();
-    private String resultPath = CanonicalizeTest.class
-            .getResource("/fr/inria/corese/command/programs/canonicalize/results/")
-            .getPath();
+    Path inputPath;
+    Path referencesPath;
+    Path resultPath;
+
+    public CanonicalizeTest() throws URISyntaxException {
+        this.inputPath = Paths.get(
+                CanonicalizeTest.class.getResource("/fr/inria/corese/command/programs/canonicalize/input/").toURI());
+
+        this.referencesPath = Paths.get(CanonicalizeTest.class
+                .getResource("/fr/inria/corese/command/programs/canonicalize/references/").toURI());
+
+        this.resultPath = Paths.get(
+                CanonicalizeTest.class.getResource("/fr/inria/corese/command/programs/canonicalize/results/").toURI());
+    }
 
     @BeforeEach
     public void setUp() {
@@ -41,7 +49,7 @@ public class CanonicalizeTest {
 
     private String getStringContent(String path) {
         try {
-            return new String(java.nio.file.Files.readAllBytes(Paths.get(path)));
+            return Files.readString(Paths.get(path));
         } catch (IOException e) {
             e.printStackTrace();
             throw new RuntimeException(e);
@@ -50,9 +58,9 @@ public class CanonicalizeTest {
 
     @Test
     public void test1InputFile() {
-        String input = inputPath + "beatles.ttl";
-        String expected = referencesPath + "beatles.nq";
-        String output = resultPath + "beatles.nq";
+        String input = inputPath.resolve("beatles.ttl").toString();
+        String expected = referencesPath.resolve("beatles.nq").toString();
+        String output = resultPath.resolve("beatles.nq").toString();
 
         String[] args = { "-i", input, "-a", "rdfc-1.0-sha256", "-o", output };
         int exitCode = cmd.execute(args);
@@ -66,8 +74,8 @@ public class CanonicalizeTest {
     @Test
     public void test1Url() {
         String input = "https://files.inria.fr/corese/data/unit-test/beatles.ttl";
-        String expected = referencesPath + "beatles.nq";
-        String output = resultPath + "beatles.nq";
+        String expected = referencesPath.resolve("beatles.nq").toString();
+        String output = resultPath.resolve("beatles.nq").toString();
 
         String[] args = { "-i", input, "-a", "rdfc-1.0-sha256", "-o", output };
         int exitCode = cmd.execute(args);
@@ -80,9 +88,9 @@ public class CanonicalizeTest {
 
     @Test
     public void test1Directory() {
-        String input = inputPath;
-        String expected = referencesPath + "beatles.nq";
-        String output = resultPath + "beatles.nq";
+        String input = inputPath.toString();
+        String expected = referencesPath.resolve("beatles.nq").toString();
+        String output = resultPath.resolve("beatles.nq").toString();
 
         String[] args = { "-i", input, "-a", "rdfc-1.0-sha256", "-o", output };
         int exitCode = cmd.execute(args);
@@ -95,9 +103,9 @@ public class CanonicalizeTest {
 
     @Test
     public void test1DirectoryRecursive() {
-        String input = inputPath;
-        String expected = referencesPath + "recursive.nq";
-        String output = resultPath + "recursive.nq";
+        String input = inputPath.toString();
+        String expected = referencesPath.resolve("recursive.nq").toString();
+        String output = resultPath.resolve("recursive.nq").toString();
 
         String[] args = { "-i", input, "-a", "rdfc-1.0-sha256", "-o", output, "-R" };
         int exitCode = cmd.execute(args);
@@ -110,10 +118,10 @@ public class CanonicalizeTest {
 
     @Test
     public void testMultipleSources() {
-        String input1 = inputPath + "beatles.ttl";
-        String input2 = Paths.get(inputPath, "recursive-level1", "person.ttl").toString();
-        String expected = referencesPath + "multiple.nq";
-        String output = resultPath + "multiple.nq";
+        String input1 = inputPath.resolve("beatles.ttl").toString();
+        String input2 = Paths.get(inputPath.toString(), "recursive-level1", "person.ttl").toString();
+        String expected = referencesPath.resolve("multiple.nq").toString();
+        String output = resultPath.resolve("multiple.nq").toString();
 
         String[] args = { "-i", input1, input2, "-a", "rdfc-1.0-sha256", "-o", output };
         int exitCode = cmd.execute(args);
@@ -126,9 +134,9 @@ public class CanonicalizeTest {
 
     @Test
     public void testInputFormat() {
-        String input = inputPath + "beatles.ttl";
-        String expected = referencesPath + "beatles.nq";
-        String output = resultPath + "beatles.nq";
+        String input = inputPath.resolve("beatles.ttl").toString();
+        String expected = referencesPath.resolve("beatles.nq").toString();
+        String output = resultPath.resolve("beatles.nq").toString();
 
         String[] args = { "-i", input, "-f", "text/turtle", "-a", "rdfc-1.0-sha256", "-o", output };
         int exitCode = cmd.execute(args);
@@ -141,8 +149,8 @@ public class CanonicalizeTest {
 
     @Test
     public void testInputBadFormat() {
-        String input = inputPath + "beatles.ttl";
-        String output = resultPath + "beatles.nq";
+        String input = inputPath.resolve("beatles.ttl").toString();
+        String output = resultPath.resolve("beatles.nq").toString();
 
         String[] args = { "-i", input, "-f", "rdfxml", "-a", "rdfc-1.0-sha256", "-o", output };
         int exitCode = cmd.execute(args);
@@ -154,9 +162,9 @@ public class CanonicalizeTest {
 
     @Test
     public void testSha384() {
-        String input = inputPath + "beatles.ttl";
-        String expected = referencesPath + "beatles-sha384.nq";
-        String output = resultPath + "beatles-sha384.nq";
+        String input = inputPath.resolve("beatles.ttl").toString();
+        String expected = referencesPath.resolve("beatles-sha384.nq").toString();
+        String output = resultPath.resolve("beatles-sha384.nq").toString();
 
         String[] args = { "-i", input, "-a", "rdfc-1.0-sha384", "-o", output };
         int exitCode = cmd.execute(args);
@@ -169,9 +177,9 @@ public class CanonicalizeTest {
 
     @Test
     public void testDefaultAlgorithm() {
-        String input = inputPath + "beatles.ttl";
-        String expected = referencesPath + "beatles.nq";
-        String output = resultPath + "beatles.nq";
+        String input = inputPath.resolve("beatles.ttl").toString();
+        String expected = referencesPath.resolve("beatles.nq").toString();
+        String output = resultPath.resolve("beatles.nq").toString();
 
         String[] args = { "-i", input, "-o", output };
         int exitCode = cmd.execute(args);
